[tool.poetry]
name = "NumberLambda"
packages = [
    { include = "src" },
    { include = "tests" },
]
version = "0.1.0"
description = "A Python Lambda function with tests managed by Poetry."
authors = ["Darin Milner <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"